BUG: Navbar mobile invisibility issue resolved & Sitemap bug and URLs updated

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ html, body {
 .topnav a {
   float: left;
   text-align: left;
-  padding: 10px 20px 25px;
+  /* padding: 10px 20px 25px; */
   padding-left: 0%;
   text-decoration: none;
   font-size: 17px;
